# cvw

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh  site-setup.csh  site-setup.sh
.github/: cli-space-cleanup.sh  dependabot.yml
.github/scripts/: cli-create-lvm.sh  cli-space-cleanup.sh
.github/workflows/: dockerBuild.yml  install.yml  lint.yml  regression-tools.yml  regression.yml  test.yml  testDocker.yml
benchmarks/: graphGen.py
benchmarks/coremark/: coremark_sweep.py
benchmarks/embench/: embench_arch_sweep.py
docs/: D-Docker-Install.md
fpga/: renumber.py
linux/: Makefile
src/cvw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dispatch/: dispatch.sv  typeDecoder.sv
src/ieu/: datapath.sv  ieu.sv
src/wally/: dispatch.sv  wallypipelinedcore.sv
synthDC/: README.md  extractSummary.py  wallySynth.py
synthDC/ppa/: ppaAnalyze.py  ppaSynth.py
synthDC/scripts/: wrapperGen.py
testbench/: testbench.sv
testbench/sdc/: ram2sdLoad.py
tests/fp/combined_IF_vectors/: extract_arch_vectors.py  extract_testfloat_vectors.py
tests/riscof/: Makefile  config.ini
tests/wally-riscv-arch-test/riscv-test-suite/rv64i_m/privilege/src/: periph-test-signature-address-calculator.py
